# lodz_lato

./: .gitignore  CMakeLists.txt  array.c  array.h  arrays.c  arrays.h  calc.c  calc.h  calculator.c  calculator.h  files_read.c  functions.c  functions.h  list.c  list.h  main.c  matrix.c  matrix.h  my_strings.c  my_strings.h  operations_float.c  operations_float.h  operations_int.c  operations_int.h  operations_point.c  operations_point.h  person.c  person.h  print.c  print.h  queue.c  queue.h  sort.c  sort.h  sorters.c  stack.c  stack.h  stat.c  stat.h  student.h  (+2 more)
